# AlgorithmsAndDataStructures

./: README.md
АТД Многосвязный список/: CMakeLists.txt  Element.h  Entrant.h  MultyList.h  README.md  SimplyList.h  main.cpp
АТД Очередь/: CMakeLists.txt  ConnectedQueue.h  ELType.h  README.md  SerialQueue.h  main.cpp
Анализ методов разрешения коллизий/: CMakeLists.txt  Functions.cpp  Functions.h  README.md  data.xlsx  main.cpp
Бинарное дерево/: BinaryTreeNode.h  CMakeLists.txt  Functions.cpp  Functions.h  README.md  db.txt  main.cpp
Многопутевое сбалансированное слияние/: CMakeLists.txt  README.md  main.cpp
Хэш таблицы/: CMakeLists.txt  Functions.cpp  Functions.h  README.md  main.cpp  statistic.xlsx
